// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer should call -core- middleware 1`] = `
Object {
  "array": Array [],
  "core": true,
  "data": Object {},
  "initialized": false,
  "keys": Array [],
  "nb": 0,
  "prev": Object {
    "action": Object {
      "payload": Object {
        "code": "1",
        "some": "info",
      },
      "type": "ADD_testPrefix",
    },
    "state": Object {
      "array": Array [],
      "data": Object {},
      "initialized": false,
      "keys": Array [],
      "nb": 0,
    },
  },
}
`;

exports[`reducer should call -post- middlewares 1`] = `
Object {
  "array": Array [],
  "core": true,
  "data": Object {},
  "initialized": false,
  "key": "code",
  "keys": Array [],
  "nb": 0,
  "path": "testPrefix",
  "post1": true,
  "post2": true,
  "prev": Object {
    "action": Object {
      "core": true,
      "payload": Object {
        "code": "1",
        "some": "info",
      },
      "post1": true,
      "type": "ADD_testPrefix",
    },
    "state": Object {
      "array": Array [],
      "core": true,
      "data": Object {},
      "initialized": false,
      "key": "code",
      "keys": Array [],
      "nb": 0,
      "path": "testPrefix",
      "post1": true,
      "prev": Object {
        "action": Object {
          "core": true,
          "payload": Object {
            "code": "1",
            "some": "info",
          },
          "type": "ADD_testPrefix",
        },
        "state": Object {
          "array": Array [],
          "core": true,
          "data": Object {},
          "initialized": false,
          "keys": Array [],
          "nb": 0,
          "prev": Object {
            "action": Object {
              "payload": Object {
                "code": "1",
                "some": "info",
              },
              "type": "ADD_testPrefix",
            },
            "state": Object {
              "array": Array [],
              "data": Object {},
              "initialized": false,
              "keys": Array [],
              "nb": 0,
            },
          },
        },
      },
    },
  },
}
`;

exports[`reducer should call -pre- middlewares 1`] = `
Object {
  "array": Array [],
  "core": true,
  "data": Object {},
  "initialized": false,
  "key": "code",
  "keys": Array [],
  "nb": 0,
  "path": "testPrefix",
  "pre1": true,
  "pre2": true,
  "prev": Object {
    "action": Object {
      "payload": Object {
        "code": "1",
        "some": "info",
      },
      "pre1": true,
      "pre2": true,
      "type": "ADD_testPrefix",
    },
    "state": Object {
      "array": Array [],
      "data": Object {},
      "initialized": false,
      "key": "code",
      "keys": Array [],
      "nb": 0,
      "path": "testPrefix",
      "pre1": true,
      "pre2": true,
      "prev": Object {
        "action": Object {
          "payload": Object {
            "code": "1",
            "some": "info",
          },
          "pre1": true,
          "type": "ADD_testPrefix",
        },
        "state": Object {
          "array": Array [],
          "data": Object {},
          "initialized": false,
          "key": "code",
          "keys": Array [],
          "nb": 0,
          "path": "testPrefix",
          "pre1": true,
          "prev": Object {
            "action": Object {
              "payload": Object {
                "code": "1",
                "some": "info",
              },
              "type": "ADD_testPrefix",
            },
            "state": Object {
              "array": Array [],
              "data": Object {},
              "initialized": false,
              "keys": Array [],
              "nb": 0,
            },
          },
        },
      },
    },
  },
}
`;

exports[`reducer should initialize 1`] = `
Object {
  "array": Array [],
  "core": true,
  "data": Object {},
  "initialized": false,
  "keys": Array [],
  "nb": 0,
  "prev": Object {
    "action": Object {
      "payload": undefined,
      "type": "UNKNOWN",
    },
    "state": Object {
      "array": Array [],
      "data": Object {},
      "initialized": false,
      "keys": Array [],
      "nb": 0,
    },
  },
}
`;
